--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rehype-class-names",
-  "version": "1.0.14",
+  "name": "@halfmatthalfcat/rehype-class-names",
+  "version": "1.0.0",
   "description": "A utility plugin to use with rehype that adds class names to HAST (html tree)",
   "main": "index.js",
   "types": "index.d.ts",
@@ -15,32 +15,32 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/riderjensen/rehype-class-names.git"
+    "url": "git+https://github.com/halfmatthalfcat/rehype-class-names.git"
   },
   "keywords": [
     "rehype",
     "hast",
     "classes"
   ],
-  "author": "Rider Jensen <riderjensen@gmail.com> (https://riderjensen.com)",
+  "author": "Matt Oliver <matt@halfmatthalfcat.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/riderjensen/rehype-class-names/issues"
+    "url": "https://github.com/halfmatthalfcat/rehype-class-names/issues"
   },
-  "homepage": "https://github.com/riderjensen/rehype-class-names#readme",
+  "homepage": "https://github.com/halfmatthalfcat/rehype-class-names#readme",
   "dependencies": {
-    "@types/hast": "^3.0.0",
+    "@types/hast": "^3.0.3",
     "hast-util-classnames": "^3.0.0",
-    "hast-util-select": "^6.0.0",
-    "unified": "^10.1.2"
+    "hast-util-select": "^6.0.2",
+    "unified": "^11.0.4"
   },
   "devDependencies": {
     "gray-matter": "^4.0.3",
-    "jest": "^29.6.2",
-    "rehype-format": "^4.0.1",
-    "rehype-stringify": "^9.0.3",
-    "remark-parse": "^10.0.2",
-    "remark-rehype": "^10.1.0",
-    "typescript": "^5.1.6"
+    "jest": "^29.7.0",
+    "rehype-format": "^5.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.0.0",
+    "typescript": "^5.3.3"
   }
 }
